<resources>
<string name="app_name">ShareKitDemo</string>
<string name="sharekit_init">Initialize</string>
<string name="sharekit_register">Register callback</string>
<string name="sharekit_start_search">Start search</string>
<string name="sharekit_uninit">Cancel initialization</string>
<string name="sharekit_unregister">Stop callback</string>
<string name="sharekit_stop_discovery">Stop searching</string>
<string name="sharekit_get_status">Obtain status</string>
<string name="sharekit_onprocess_devices">Active devices list</string>
<string name="sharekit_open_wifi_bt">Enable Wi-Fi & Bluetooth</string>
<string name="sharekit_send">Share</string>
<string name="sharekit_cancel">Stop sharing</string>
<string name="sharekit_peer_device">Peer device:</string>
<string name="sharekit_choose_device">Select device:</string>
<string name="sharekit_share_text">Text</string>
<string name="sharekit_share_files">Files</string>
<string name="sharekit_text_content">Text content:</string>
<string name="sharekit_text_sample">The peer device will receive a file with this content inside.</string>
<string name="sharekit_device_list">Devices list:</string>
<string name="sharekit_historys">History:</string>
<string name="sharekit_device_found">Discovered device %s</string>
<string name="sharekit_device_disappear">Lost track of device %s</string>
<string name="sharekit_send_progress">Sending progress: %d%%</string>
<string name="sharekit_send_finish">Sent.</string>
<string name="sharekit_state_chg">Status change: %s</string>
<string name="sharekit_send_error">Exception: %s</string>
<string name="sharekit_trans_sate">Device %s:%s</string>
<string name="sharekit_status">Status:</string>
<string name="sharekit_status_ok">OK</string>
<string name="sharekit_service_not_connected">Initialize the service and wait until the initialization is complete.</string>
<string name="sharekit_ability_not_ready">Make sure Bluetooth and Wi-Fi are enabled.</string>
<string name="sharekit_remote_exception">Failed to invoke the service.</string>
<string name="sharekit_bluetooth_wifi_no_permission">The app does not have the Bluetooth or Wi-Fi permission.</string>
<string name="sharekit_service_not_inited">The service has not been initialized.</string>
<string name="sharekit_permission_verify_failed">App authentication failed or is in progress. Please try again later.</string>
<string name="sharekit_invalid_appid">No valid app ID.</string>
<string name="sharekit_get_appid_failed">Failed to parse the app ID.</string>
<string name="sharekit_invalid_parameter">Parameter error.</string>
<string name="sharekit_size_out_of_limit">Size limit exceeded.</string>
<string name="sharekit_no_device">Device quantity: 0</string>
<string name="sharekit_device_list_detail">Device quantity: %d %s</string>
<string name="sharekit_device_detail">%s discovered at %s</string>
<string name="sharekit_time"> Time </string>
<string name="sharekit_file_list">Files list:</string>
<string name="sharekit_file_example">Download/file A</string>
<string name="sharekit_send_preview_ok">Preview sent.</string>
<string name="sharekit_send_data">Started sending data.</string>
<string name="sharekit_send_cancel">The local end canceled sending.</string>
<string name="sharekit_send_recv_cancel">The peer end canceled receiving.</string>
<string name="sharekit_send_recv_reject">The peer end rejected receiving.</string>
<string name="sharekit_send_recv_busy">The peer end is busy.</string>
<string name="sharekit_send_local_busy">The local end is busy.</string>
<string name="sharekit_err_socket">Socket error.</string>
<string name="sharekit_err_remote">Interaction error.</string>
<string name="sharekit_timeout_confirm">The preview was sent, and the peer confirmation timed out.</string>
<string name="sharekit_timeout_finish">Data transmission was complete, and acquisition of the stop message timed out.</string>
<string name="sharekit_timeout_finishok">Data transmission was complete, and acquisition of the stop message timed out.</string>
<string name="sharekit_timeout_cancel">Cancellation result timed out.</string>
<string name="sharekit_timeout_previewdata">Obtaining previews timed out.</string>
<string name="sharekit_timeout_filedata">Timeout after acceptance.</string>
<string name="sharekit_timeout_reject">Timeout after rejection.</string>
<string name="sharekit_timeout_dtcpauth">Connection verification timed out.</string>
<string name="sharekit_timeout_socket_connect">Socket connection timed out.</string>
<string name="sharekit_err_nospace">Insufficient space.</string>
<string name="sharekit_err_io">IO error.</string>
<string name="sharekit_init_finish">Initialization completed.</string>
<string name="sharekit_init_failed">Initialization failed.</string>
<string name="sharekit_init_start">Started initialization.</string>
<string name="sharekit_register_ret">Registered callback. Result:</string>
<string name="sharekit_unregister_ret">Unregistered callback. Result:</string>
<string name="sharekit_start_discovery_ret">Started to search for devices. Result:</string>
<string name="sharekit_stop_discover_ret">Stopped searching for devices. Result:</string>
<string name="sharekit_status_ret">Status:</string>
<string name="sharekit_get_device_list_ret">Device quantity: %d; devices: %s</string>
<string name="sharekit_enable_ret">Enabled Wi-Fi and Bluetooth. Result:</string>
<string name="sharekit_start_found">Started to search for the devices list: %s</string>
<string name="sharekit_device_desc">Device name: %s; device ID header: %s</string>
<string name="sharekit_try_cancel_ret">Attempted to cancel sharing with %s. Result:</string>
<string name="sharekit_device_name_empty">No target device found.</string>
<string name="sharekit_content_empty">Text content is empty.</string>
<string name="sharekit_file_list_empty">No files.</string>
<string name="sharekit_file_not_exist">Files: %s not found and skipped.</string>
<string name="sharekit_no_files_left">No files to share.</string>
<string name="sharekit_success">Successful</string>
<string name="sharekit_fail">Failed</string>
<string name="sharekit_try_send">Attempted to share with %s. Result:</string>
<string name="sharekit_device_alread_lost">Lost track of the specified device. Please try again later.</string>
</resources>
