<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context="com.sharekit.demo.ShareKitDemo">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

        <Button
                android:id="@+id/init"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/sharekit_init"
                android:textSize="12sp" />

        <Button
                android:id="@+id/register"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/sharekit_register"
                android:textSize="12sp" />

        <Button
                android:id="@+id/discovery"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/sharekit_start_search"
                android:textSize="12sp" />
    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

        <Button
                android:id="@+id/uninit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/sharekit_uninit"
                android:textSize="12sp" />

        <Button
                android:id="@+id/unregister"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/sharekit_unregister"
                android:textSize="12sp" />

        <Button
                android:id="@+id/stop_discovery"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/sharekit_stop_discovery"
                android:textSize="12sp" />
    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

        <Button
                android:id="@+id/get_status"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/sharekit_get_status"
                android:textSize="12sp" />

        <Button
                android:id="@+id/get_device_list"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/sharekit_onprocess_devices"
                android:textSize="12sp" />

        <Button
                android:id="@+id/enable"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/sharekit_open_wifi_bt"
                android:textSize="12sp" />
    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

        <Button
                android:id="@+id/send"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/sharekit_send"
                android:textSize="12sp" />

        <Button
                android:id="@+id/cancel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/sharekit_cancel"
                android:textSize="12sp" />
    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

        <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sharekit_peer_device"
                    android:textSize="14sp" />

            <EditText
                    android:id="@+id/dest"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:singleLine="true"
                    android:text=""
                    android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8sp"
                    android:text="@string/sharekit_choose_device"
                    android:textSize="14sp" />

            <Spinner
                    android:id="@+id/devices"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content" />

        </LinearLayout>
    </LinearLayout>

    <RadioGroup
            android:id="@+id/group"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:checkedButton="@+id/radio_text"
            android:textSize="12sp">

        <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sharekit_share_text"
                android:onClick="onRadioButtonSwitched"
                android:id="@+id/radio_text" />

        <RadioButton
                android:id="@+id/radio_file"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:onClick="onRadioButtonSwitched"
                android:text="@string/sharekit_share_files" />
    </RadioGroup>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <TextView
                android:id="@+id/share_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sharekit_text_content"
                android:textSize="14sp" />

        <EditText
                android:id="@+id/sharetext"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:maxLines="3"
                android:minLines="3"
                android:text="@string/sharekit_text_sample"
                android:textSize="12sp" />
    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:visibility="visible">

        <TextView
                android:layout_weight="2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/sharekit_device_list"
                android:textSize="14sp" />

        <TextView
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/sharekit_historys"
                android:textSize="12sp" />
    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:visibility="visible">

        <TextView
                android:id="@+id/device_list"
                android:layout_weight="2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="8sp" />

        <ScrollView
                android:id="@+id/scrollview"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <TextView
                    android:id="@+id/status_history"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:scrollbars="vertical"
                    android:textSize="8sp" />
        </ScrollView>
    </LinearLayout>
</LinearLayout>